[package]
name = "rust-aoc"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
itertools = "0.12.0"
rayon = "1.8.0"
regex = "1.10.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
